Use try so we can clean up in finally